# tcode

./: .env.example  CLAUDE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: CHANGELOG.md  CONTRIBUTING.md  bug_report.md  pull_request_template.md
.github/workflows/: ci.yml  lint.yml
data/: index.json  problems.json
scripts/: build_index.py  import_problems.py
src/tcode/: cli.py  config.py  problems.py  search.py  session.py  tui.py
src/tcode/assets/: search.tcss  tcode.tcss
tests/: test_problems.py  test_session.py
