[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcode"
version = "0.1.0"
description = "tcode is an ai terminal tutor"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.84.0",
    "textual>=8.1.1",
    "watchdog>=6.0.0",
]

[project.scripts]
tcode = "tcode.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
