[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcode"
version = "0.1.0"
description = "tcode is an ai terminal tutor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "click>=8.3.1",
    "textual>=8.1.1",
    "textual-demo>=1.0.3",
    "textual-dev>=1.8.0",
    "watchdog>=6.0.0",
]

[project.scripts]
tcode = "tcode.cli:cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
